--- a/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGenaralFeedBackListVC.storyboard
+++ b/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGenaralFeedBackListVC.storyboard
@@ -25,38 +25,39 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="generalFeedBackCell" rowHeight="103" id="Urj-i7-dA7" customClass="YQGeneralFeedBackCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="103"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="generalFeedBackCell" rowHeight="89" id="Urj-i7-dA7" customClass="YQGeneralFeedBackCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="89"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Urj-i7-dA7" id="Z3s-JX-f6G">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eI0-iP-VNU">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
-                                                    <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="10" id="C5x-Kn-SPB"/>
+                                                        <constraint firstAttribute="height" constant="5" id="C5x-Kn-SPB"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PoQ-6E-vHM">
-                                                    <rect key="frame" x="0.0" y="92.5" width="375" height="10"/>
-                                                    <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <rect key="frame" x="0.0" y="83.5" width="375" height="5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="10" id="V5E-AP-Vyi"/>
+                                                        <constraint firstAttribute="height" constant="5" id="V5E-AP-Vyi"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qk1-SX-0eF">
-                                                    <rect key="frame" x="0.0" y="10" width="375" height="50"/>
+                                                    <rect key="frame" x="0.0" y="5" width="375" height="40"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="at0-PX-ive">
-                                                            <rect key="frame" x="10" y="17" width="35.5" height="17"/>
+                                                            <rect key="frame" x="10" y="5" width="275" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76Z-xN-320">
-                                                            <rect key="frame" x="334.5" y="17" width="35.5" height="17"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76Z-xN-320">
+                                                            <rect key="frame" x="290" y="16.5" width="80" height="17"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="KXh-uh-Fo6"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -64,15 +65,16 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="1Ds-ig-YEn"/>
+                                                        <constraint firstAttribute="height" constant="40" id="1Ds-ig-YEn"/>
+                                                        <constraint firstItem="76Z-xN-320" firstAttribute="leading" secondItem="at0-PX-ive" secondAttribute="trailing" constant="5" id="YG5-nz-1rX"/>
                                                         <constraint firstAttribute="trailing" secondItem="76Z-xN-320" secondAttribute="trailing" constant="5" id="ac7-hC-ovU"/>
-                                                        <constraint firstItem="76Z-xN-320" firstAttribute="centerY" secondItem="Qk1-SX-0eF" secondAttribute="centerY" id="cng-d8-pEX"/>
-                                                        <constraint firstItem="at0-PX-ive" firstAttribute="centerY" secondItem="Qk1-SX-0eF" secondAttribute="centerY" id="mLU-Ts-7av"/>
+                                                        <constraint firstItem="76Z-xN-320" firstAttribute="centerY" secondItem="Qk1-SX-0eF" secondAttribute="centerY" constant="5" id="cng-d8-pEX"/>
+                                                        <constraint firstItem="at0-PX-ive" firstAttribute="top" secondItem="Qk1-SX-0eF" secondAttribute="top" constant="5" id="m47-vn-Dc2"/>
                                                         <constraint firstItem="at0-PX-ive" firstAttribute="leading" secondItem="Qk1-SX-0eF" secondAttribute="leading" constant="10" id="sfp-dX-HZh"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7J-DR-a0v">
-                                                    <rect key="frame" x="334.5" y="70" width="35.5" height="17"/>
+                                                    <rect key="frame" x="334.5" y="55" width="35.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -100,6 +102,12 @@
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
