报事历史添加待处理和已关闭工单查询情况;后台静默推送的alert弹框显示联调,联测;

--- a/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQJournalAddEvent.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQJournalAddEvent.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uDc-Hh-Vjf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uDc-Hh-Vjf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,16 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="drD-7G-B18" customClass="SJTextView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="300"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="150"/>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="kLX-04-Wmi"/>
+                                    <constraint firstAttribute="height" constant="150" id="kLX-04-Wmi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ua-gW-7CQ">
-                                <rect key="frame" x="87" y="355" width="200" height="50"/>
+                                <rect key="frame" x="87" y="255" width="200" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Mh1-7G-dio"/>
                                     <constraint firstAttribute="width" constant="200" id="bSY-8b-XiI"/>
@@ -60,7 +60,7 @@
                         <constraints>
                             <constraint firstItem="7Ua-gW-7CQ" firstAttribute="centerX" secondItem="kAe-jr-kFv" secondAttribute="centerX" id="9LK-aV-DM0"/>
                             <constraint firstItem="7Ua-gW-7CQ" firstAttribute="top" secondItem="drD-7G-B18" secondAttribute="bottom" constant="35" id="Xa4-l0-R6b"/>
-                            <constraint firstItem="drD-7G-B18" firstAttribute="top" secondItem="V1h-qZ-mpQ" secondAttribute="bottom" id="ZVx-2G-2rO"/>
+                            <constraint firstItem="drD-7G-B18" firstAttribute="top" secondItem="V1h-qZ-mpQ" secondAttribute="bottom" constant="50" id="ZVx-2G-2rO"/>
                             <constraint firstItem="drD-7G-B18" firstAttribute="leading" secondItem="kAe-jr-kFv" secondAttribute="leading" id="qeI-JR-RUi"/>
                             <constraint firstAttribute="trailing" secondItem="drD-7G-B18" secondAttribute="trailing" id="rcj-7n-oPJ"/>
                         </constraints>
