--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
@@ -1585,8 +1585,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6qp-cd-gQW">
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eAi-9a-O7d">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="待处理">
+                                            <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <state key="selected">
+                                            <color key="titleColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonSelectClick:" destination="Ncu-GQ-Ihq" eventType="touchUpInside" id="lNY-5r-mxV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jra-2m-8Xa">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="已关闭">
+                                            <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <state key="selected">
+                                            <color key="titleColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonSelectClick:" destination="Ncu-GQ-Ihq" eventType="touchUpInside" id="AYv-BG-xRf"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nxs-rm-S73">
+                                        <rect key="frame" x="186.5" y="3" width="1" height="44"/>
+                                        <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="YY9-5B-PeY"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="IeN-W2-Qgg"/>
+                                    <constraint firstItem="eAi-9a-O7d" firstAttribute="leading" secondItem="6qp-cd-gQW" secondAttribute="leading" id="Oz9-d4-9d9"/>
+                                    <constraint firstAttribute="trailing" secondItem="jra-2m-8Xa" secondAttribute="trailing" id="R4X-pf-nkB"/>
+                                    <constraint firstItem="jra-2m-8Xa" firstAttribute="width" secondItem="eAi-9a-O7d" secondAttribute="width" id="Rc3-qE-VCH"/>
+                                    <constraint firstItem="eAi-9a-O7d" firstAttribute="top" secondItem="6qp-cd-gQW" secondAttribute="top" id="aMR-tB-l7F"/>
+                                    <constraint firstItem="jra-2m-8Xa" firstAttribute="leading" secondItem="eAi-9a-O7d" secondAttribute="trailing" id="cbB-4f-WdI"/>
+                                    <constraint firstItem="jra-2m-8Xa" firstAttribute="top" secondItem="6qp-cd-gQW" secondAttribute="top" id="fPA-NI-s2y"/>
+                                    <constraint firstItem="jra-2m-8Xa" firstAttribute="leading" secondItem="Nxs-rm-S73" secondAttribute="trailing" id="hod-xB-Zhu"/>
+                                    <constraint firstAttribute="bottom" secondItem="eAi-9a-O7d" secondAttribute="bottom" id="iuz-fk-Smo"/>
+                                    <constraint firstAttribute="bottom" secondItem="jra-2m-8Xa" secondAttribute="bottom" id="oYd-Wn-9Wc"/>
+                                    <constraint firstAttribute="bottom" secondItem="Nxs-rm-S73" secondAttribute="bottom" constant="3" id="tTh-q4-aoI"/>
+                                    <constraint firstItem="Nxs-rm-S73" firstAttribute="top" secondItem="6qp-cd-gQW" secondAttribute="top" constant="3" id="wY3-c2-J9x"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="173" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kLM-Z2-ftv">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="116" width="375" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="workOrder" rowHeight="186" id="XJS-Fa-3Am" customClass="WorkOrderCell" customModule="OpticalValleyUnite" customModuleProvider="target">
@@ -1739,12 +1792,25 @@
                                     <outlet property="delegate" destination="Ncu-GQ-Ihq" id="EpC-zL-TTQ"/>
                                 </connections>
                             </tableView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dsW-C4-Apz">
+                                <rect key="frame" x="0.0" y="114" width="375" height="2"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="jwb-Yt-ERw"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.94901960780000005" green="0.95686274510000002" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kLM-Z2-ftv" firstAttribute="top" secondItem="6qp-cd-gQW" secondAttribute="bottom" constant="2" id="5bY-QQ-KcI"/>
+                            <constraint firstItem="dsW-C4-Apz" firstAttribute="top" secondItem="6qp-cd-gQW" secondAttribute="bottom" id="9Wk-Dp-2QI"/>
+                            <constraint firstAttribute="trailing" secondItem="dsW-C4-Apz" secondAttribute="trailing" id="AE3-2z-wve"/>
+                            <constraint firstItem="dsW-C4-Apz" firstAttribute="leading" secondItem="Pvd-4v-mGf" secondAttribute="leading" id="LBq-Si-PTB"/>
                             <constraint firstItem="ggA-yJ-WJ2" firstAttribute="top" secondItem="kLM-Z2-ftv" secondAttribute="bottom" id="OCl-tI-LRX"/>
-                            <constraint firstItem="kLM-Z2-ftv" firstAttribute="top" secondItem="rVx-d6-AQh" secondAttribute="bottom" id="mcH-sR-pZW"/>
+                            <constraint firstItem="6qp-cd-gQW" firstAttribute="top" secondItem="rVx-d6-AQh" secondAttribute="bottom" id="bTM-sR-Ecr"/>
+                            <constraint firstAttribute="trailing" secondItem="6qp-cd-gQW" secondAttribute="trailing" id="lkr-3k-JsT"/>
                             <constraint firstItem="kLM-Z2-ftv" firstAttribute="leading" secondItem="Pvd-4v-mGf" secondAttribute="leading" id="ngZ-uj-L88"/>
+                            <constraint firstItem="6qp-cd-gQW" firstAttribute="leading" secondItem="Pvd-4v-mGf" secondAttribute="leading" id="xhH-Lf-DNH"/>
                             <constraint firstAttribute="trailing" secondItem="kLM-Z2-ftv" secondAttribute="trailing" id="yIP-2E-klG"/>
                         </constraints>
                     </view>
@@ -1752,11 +1818,12 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="kLM-Z2-ftv" id="6ug-bu-a6L"/>
+                        <outlet property="waitingHandleButton" destination="eAi-9a-O7d" id="vFX-GX-gdc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R03-eh-57k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="658" y="-398"/>
+            <point key="canvasLocation" x="656.79999999999995" y="-398.05097451274366"/>
         </scene>
     </scenes>
     <resources>
