定位历史的接口调试调通;home新增项目选择的跳转和选择;

--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
@@ -297,16 +297,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="159"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyu-dr-Wog">
-                                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="20" width="414" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OVU-EMS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTN-ax-yYg">
-                                                <rect key="frame" x="166" y="11" width="83" height="22"/>
+                                                <rect key="frame" x="166" y="4" width="83" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VWM-dt-8AB">
-                                                <rect key="frame" x="12" y="10" width="40" height="34"/>
+                                                <rect key="frame" x="12" y="10" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="3Zy-pn-8uz"/>
                                                 </constraints>
@@ -316,11 +316,19 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfe-z9-7kp">
-                                                <rect key="frame" x="354" y="8.6666666666666679" width="50" height="27.000000000000004"/>
+                                                <rect key="frame" x="354" y="11.666666666666668" width="50" height="27.000000000000004"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <state key="normal" title="天气情况"/>
                                                 <connections>
                                                     <action selector="weatherButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lIw-Ys-kbq"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ss-sY-Knc">
+                                                <rect key="frame" x="186.66666666666666" y="31" width="41" height="19"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                <state key="normal" title="项目选择"/>
+                                                <connections>
+                                                    <action selector="projectSelectClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bkl-wV-RcU"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -329,36 +337,39 @@
                                             <constraint firstAttribute="bottom" secondItem="VWM-dt-8AB" secondAttribute="bottom" id="3Xb-k9-adB"/>
                                             <constraint firstAttribute="trailing" secondItem="mfe-z9-7kp" secondAttribute="trailing" constant="10" id="429-Js-4qO"/>
                                             <constraint firstItem="mfe-z9-7kp" firstAttribute="centerY" secondItem="eyu-dr-Wog" secondAttribute="centerY" id="BEA-7s-yRj"/>
+                                            <constraint firstItem="7ss-sY-Knc" firstAttribute="top" secondItem="sTN-ax-yYg" secondAttribute="bottom" constant="5" id="E45-qb-Inq"/>
                                             <constraint firstItem="VWM-dt-8AB" firstAttribute="top" secondItem="eyu-dr-Wog" secondAttribute="top" constant="10" id="X05-BN-wMT"/>
-                                            <constraint firstAttribute="height" constant="44" id="Y2S-cC-VAT"/>
+                                            <constraint firstAttribute="height" constant="50" id="Y2S-cC-VAT"/>
                                             <constraint firstItem="VWM-dt-8AB" firstAttribute="leading" secondItem="eyu-dr-Wog" secondAttribute="leading" constant="12" id="bQ8-vJ-Kv8"/>
-                                            <constraint firstItem="sTN-ax-yYg" firstAttribute="centerY" secondItem="eyu-dr-Wog" secondAttribute="centerY" id="max-h9-jFs"/>
+                                            <constraint firstAttribute="bottom" secondItem="7ss-sY-Knc" secondAttribute="bottom" id="dZz-a2-Yb8"/>
+                                            <constraint firstItem="7ss-sY-Knc" firstAttribute="centerX" secondItem="eyu-dr-Wog" secondAttribute="centerX" id="iZA-fu-zwh"/>
+                                            <constraint firstItem="sTN-ax-yYg" firstAttribute="centerY" secondItem="eyu-dr-Wog" secondAttribute="centerY" constant="-10" id="max-h9-jFs"/>
                                             <constraint firstItem="sTN-ax-yYg" firstAttribute="centerX" secondItem="eyu-dr-Wog" secondAttribute="centerX" id="ziC-TR-S2X"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5J9-1o-pYA" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="135" y="64" width="40" height="95"/>
+                                        <rect key="frame" x="135" y="70" width="40" height="89"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="QPJ-Kg-iG1"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQU-WI-BZd" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="239" y="64" width="40" height="95"/>
+                                        <rect key="frame" x="239" y="70" width="40" height="89"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="l9x-1c-sDS"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="522-aS-wj6" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="32" y="64" width="40" height="95"/>
+                                        <rect key="frame" x="32" y="70" width="40" height="89"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="46s-Us-Xyk"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ACN-td-8Ge" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                        <rect key="frame" x="342" y="64" width="40" height="95"/>
+                                        <rect key="frame" x="342" y="70" width="40" height="89"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="gWC-5a-dyB"/>
@@ -416,6 +427,7 @@
                         <outlet property="donw2BtnView" destination="8SK-bd-dhs" id="pwP-bo-ueV"/>
                         <outlet property="donw3BtnView" destination="heH-Cf-e0j" id="4Ai-Kk-dk0"/>
                         <outlet property="messageBtn" destination="VWM-dt-8AB" id="SjM-Zp-hQq"/>
+                        <outlet property="projectButton" destination="7ss-sY-Knc" id="koM-jo-UDN"/>
                         <outlet property="subsystemBtn" destination="ItE-1g-Tdh" id="GLu-DM-uCo"/>
                         <outlet property="tableView" destination="eJ7-xV-TzL" id="q6W-6d-RbE"/>
                         <outlet property="top1BtnView" destination="522-aS-wj6" id="HeG-uj-jat"/>
@@ -427,7 +439,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3028" y="-121"/>
+            <point key="canvasLocation" x="3027.536231884058" y="-121.46739130434784"/>
         </scene>
         <!--WorkOrder-->
         <scene sceneID="cT2-oD-UIH">
